<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15dp">
    <TextView
        android:id="@+id/tvQuesAssessmentCustomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="how do you feel?"
        android:layoutDirection="inherit"
        android:textSize="22sp"
        android:textColor="@color/appColorBlack"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/myriad_pro_regular"
        />
    <TextView
        android:id="@+id/tvAnswerAssessmentCustomLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuesAssessmentCustomLayout"
        android:text="how do you feel?"
        android:layoutDirection="inherit"
        android:textSize="18sp"
        android:gravity="start"
        app:layout_constraintHorizontal_bias="0"
        android:textColor="@color/appColorWhite"
        android:background="@drawable/btn_black_bg"
        android:paddingStart="16sp"
        android:paddingLeft="16sp"
        android:paddingEnd="16sp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/myriad_pro_regular"
        />
    <TableLayout
        android:id="@+id/flightDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvAnswerAssessmentCustomLayout"
        app:layout_constraintStart_toStartOf="@id/tvQuesAssessmentCustomLayout"
        app:layout_constraintEnd_toEndOf="@id/tvQuesAssessmentCustomLayout"
        app:layout_constraintRight_toRightOf="@id/tvQuesAssessmentCustomLayout"
        app:layout_constraintLeft_toLeftOf="@id/tvQuesAssessmentCustomLayout">

        <TableRow
            android:id="@+id/trCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/tvCountryCustomAssessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/country_text1"
                android:textSize="14sp"
                android:textColor="@color/appColorBlack"
                android:padding="2dp"
                />
            <TextView
                android:id="@+id/tvCountryValCustomAssessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/country_text"
                android:textSize="14sp"
                android:textColor="@color/app_color_grey"
                android:padding="2dp"
                />
        </TableRow>

        <TableRow
            android:id="@+id/trFlightNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/tvFlightNumCustomAssessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/flight_text"
                android:textSize="14sp"
                android:textColor="@color/appColorBlack"
                android:padding="2dp"
                />
            <TextView
                android:id="@+id/tvFlightNumValCustomAssessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/flight_text"
                android:textSize="14sp"
                android:textColor="@color/app_color_grey"
                android:padding="2dp"
                />
        </TableRow>
        <TableRow
            android:id="@+id/trPassportNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/tvPassportNumCustomAssessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/passport_no"
                android:textSize="14sp"
                android:textColor="@color/appColorBlack"
                android:padding="2dp"
                />
            <TextView
                android:id="@+id/tvPassporttNumValCustomAssessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/flight_text"
                android:textSize="14sp"
                android:textColor="@color/app_color_grey"
                android:padding="2dp"
                />
        </TableRow>
    </TableLayout>


    <TableLayout
        android:id="@+id/personDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvAnswerAssessmentCustomLayout"
        app:layout_constraintStart_toStartOf="@id/tvQuesAssessmentCustomLayout"
        app:layout_constraintEnd_toEndOf="@id/tvQuesAssessmentCustomLayout"
        app:layout_constraintRight_toRightOf="@id/tvQuesAssessmentCustomLayout"
        app:layout_constraintLeft_toLeftOf="@id/tvQuesAssessmentCustomLayout">

        <TableRow
            android:id="@+id/trName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/tvNameCustomAssessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/name_text1"
                android:textSize="14sp"
                android:textColor="@color/appColorBlack"
                android:padding="2dp"
                />
            <TextView
                android:id="@+id/tvNameValCustomAssessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/name_text"
                android:textSize="14sp"
                android:textColor="@color/app_color_grey"
                android:padding="2dp"
                />
        </TableRow>

        <TableRow
            android:id="@+id/trMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/tvMobileNumCustomAssessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/mobile_no1"
                android:textSize="14sp"
                android:textColor="@color/appColorBlack"
                android:padding="2dp"
                />
            <TextView
                android:id="@+id/tvMobileNumValCustomAssessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/mobile_no_text"
                android:textSize="14sp"
                android:textColor="@color/app_color_grey"
                android:padding="2dp"
                />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>