<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_country_flight_HL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_text"
        android:textColor="@color/appColorBlack"
        android:textSize="16sp"
        android:includeFontPadding="false"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/myriad_pro_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/tv_countryError_flight_HL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingTop="2dp"
        android:fontFamily="@font/myriad_pro_regular"
        android:text="Arrived From is required."
        android:textColor="@color/requireRedColor"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tv_country_flight_HL"
        app:layout_constraintLeft_toLeftOf="@+id/tv_country_flight_HL"
        app:layout_constraintStart_toStartOf="@+id/tv_country_flight_HL"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_country_flight_HL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:elevation="5dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="2dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_countryError_flight_HL"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
       <!-- <Spinner
            android:id="@+id/spin_dist_user_info_frag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_bg"
            tools:listitem="@layout/country_spinner_item"

            />-->
        <com.sapphire.HealthAssessmentPDMA.helper.BackPressAwareAutoTextview
            android:id="@+id/spin_dist_user_info_frag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:dropDownHeight="150dp"
            android:completionThreshold="1"
            android:textColor="@color/appColorBlack"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/myriad_pro_regular"
            android:inputType="text"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="Select Country"
            android:textEditSuggestionItemLayout="@layout/country_spinner_item"
            android:textColorHint="@color/app_color_grey"
            android:textCursorDrawable="@drawable/cursor_drawable"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_flightNo_flight_HL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flight_text"
        android:textColor="@color/appColorBlack"
        android:textSize="16sp"
        android:includeFontPadding="false"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/myriad_pro_regular"
        app:layout_constraintTop_toBottomOf="@+id/cardView_country_flight_HL"
        app:layout_constraintLeft_toLeftOf="@+id/cardView_country_flight_HL"
        app:layout_constraintStart_toStartOf="@+id/cardView_country_flight_HL"
        />

    <TextView
        android:id="@+id/tv_flightNoError_flight_HL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingTop="2dp"
        android:fontFamily="@font/myriad_pro_regular"
        android:text="Flight No is required."
        android:textColor="@color/requireRedColor"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tv_flightNo_flight_HL"
        app:layout_constraintLeft_toLeftOf="@+id/tv_flightNo_flight_HL"
        app:layout_constraintStart_toStartOf="@+id/tv_flightNo_flight_HL"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_flightNo_flight_HL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:elevation="5dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="2dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_flightNoError_flight_HL"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.sapphire.HealthAssessmentPDMA.helper.BackPressAwareEdittext
            android:id="@+id/edFlightNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="EK603"
            android:background="@null"
            android:textSize="16sp"
            android:textColor="@color/appColorBlack"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/myriad_pro_regular"
            android:textCursorDrawable="@drawable/cursor_drawable"
            />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_passportNo_flight_HL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passport_no"
        android:textColor="@color/appColorBlack"
        android:textSize="16sp"
        android:includeFontPadding="false"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/myriad_pro_regular"
        app:layout_constraintTop_toBottomOf="@+id/cardView_flightNo_flight_HL"
        app:layout_constraintLeft_toLeftOf="@+id/cardView_flightNo_flight_HL"
        app:layout_constraintStart_toStartOf="@+id/cardView_flightNo_flight_HL"
        />

    <TextView
        android:id="@+id/tv_passportNoError_flight_HL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingTop="2dp"
        android:fontFamily="@font/myriad_pro_regular"
        android:text="Passport No is required."
        android:textColor="@color/requireRedColor"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tv_passportNo_flight_HL"
        app:layout_constraintLeft_toLeftOf="@+id/tv_passportNo_flight_HL"
        app:layout_constraintStart_toStartOf="@+id/tv_passportNo_flight_HL"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_passportNo_flight_HL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:elevation="5dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="2dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_passportNoError_flight_HL"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.sapphire.HealthAssessmentPDMA.helper.BackPressAwareEdittext
            android:id="@+id/edPassportNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="FJ1234567"
            android:background="@null"
            android:textSize="16sp"
            android:textColor="@color/appColorBlack"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/myriad_pro_regular"

            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNextButton_flight_HLflight_HL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="4dp"
        android:outlineProvider="bounds"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/cardView_passportNo_flight_HL"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        >
        <Button
            android:id="@+id/btn_next_flight_HL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NEXT"
            android:textColor="@color/appColorWhite"
            android:background="@drawable/btn_sign_in"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:fontFamily="@font/myriad_pro_regular"
            android:includeFontPadding="false"

            />
    </androidx.cardview.widget.CardView>
    <View
        android:id="@+id/view_spacing_flight_history_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewNextButton_flight_HLflight_HL"
        />

</androidx.constraintlayout.widget.ConstraintLayout>